2011-10-17  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_prepare): Allow for user patches.

2011-10-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass: Clarify policy on site-init files.

2011-08-22  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass:
	* elisp-common.eclass: Move authors' list to new @AUTHOR block.

2011-08-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass:
	* elisp-common.eclass: Change [ ] to [[ ]] throughout.

2011-08-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-emacs-version): Report error and
	return exit status if running of Emacs failed.
	(elisp-need-emacs): Test for return status of elisp-emacs-version.

2011-07-13  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_install): Fix installation of Info files
	if Texinfo source is in a subdirectory, bug 373741. Thanks to
	Martin von Gagern <Martin.vGagern@gmx.net>.

2010-11-10  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-need-emacs): New function.
	* elisp.eclass (elisp_pkg_setup): Use it.

2010-09-14  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-make-autoload-file): In header
	comment, use PN not P.

2010-08-23  Christian Faulhammer  <fauli@gentoo.org>

	* elisp.eclass: Update documentation

2010-08-22  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Remove dead function; it has
	been deprecated two years ago in bug 235442.

	* elisp.eclass: Update documentation.

2010-07-21  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): The nullglob shell
	option is not needed here, because inside the loop we test for
	existence of all files anyway. See also bug 328863.
	The temporary file needs only be removed in the no changes case.

2010-01-30  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_prepare): Look for patch in WORKDIR too.

2009-11-25  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass: Prepare for Prefix support.