@@ -40,6 +40,11 @@
 # Patch files are searched for in the current working dir, WORKDIR, and
 # FILESDIR.
 
+# @ECLASS-VARIABLE: ELISP_REMOVE
+# @DEFAULT_UNSET
+# @DESCRIPTION:
+# Space separated list of files to remove after unpacking the sources.
+
 # @ECLASS-VARIABLE: SITEFILE
 # @DEFAULT_UNSET
 # @DESCRIPTION:
@@ -123,6 +128,10 @@ elisp_src_prepare() {
 
 	# apply any user patches
 	epatch_user
+
+	if [[ -n ${ELISP_REMOVE} ]]; then
+		rm ${ELISP_REMOVE} || die
+	fi
 }
 
 # @FUNCTION: elisp_src_configure
