@@ -1,3 +1,8 @@
+2011-11-22  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp.eclass (ELISP_REMOVE): New variable.
+	(elisp_src_prepare): Remove files specified in ELISP_REMOVE.
+
 2011-10-17  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp.eclass (elisp_src_prepare): Allow for user patches.
